syntax = "proto3";

package user;
option go_package = "github.com/TellSamm/project-protos/proto/user";

message User {
  string id = 1;
  string email = 2;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserResponse {
  User user = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string password = 3;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}